k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventflow
spec:
  type: NodePort
  selector:
    app: eventflow
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
